# DjangoTemplate

./: .gitignore  docker-compose.yml
nginx/: nginx.conf
project/: Dockerfile  pyproject.toml  requirements.txt
project/django_video/: settings.py
project/login/: forms.py  models.py  urls.py  views.py
project/login/templates/login/: login.html  register.html
project/video_app/: models.py  tasks.py  urls.py  utils.py  views.py
project/video_app/migrations/: 0001_enable_pgvector.py  0001_initial.py  0002_initial.py  0003_alter_fileupload_file.py
project/video_app/static/video_app/css/: styles.css
project/video_app/static/video_app/js/: script.js
project/video_app/templates/video_app/: base.html  index.html
