[tool.poetry]
package-mode = false
name = "project"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
django-celery-beat = "^2.7.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"
python-dotenv = "^1.0.1"
pgvector = "^0.3.6"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
